--- a/index.html
+++ b/index.html
@@ -1,39 +1,91 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Computadoras Gamer</title>
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+  <title>Kawaii Shop</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link rel="icon" href="imagenes/Icon.png">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Computadoras Gamer</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#inicio">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#productos">Productos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#contacto">Contacto</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
-  <header id="inicio" class="jumbotron jumbotron-fluid bg-primary text-white text-center">
-    <div class="container">
-      <h1 class="display-4">Las mejores computadoras gamer</h1>
-      <p class="lead">Experimenta el poder del gaming con nuestras máquinas de alto rendimiento.</p>
-    </div>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="imagenes/Icon.png" alt="Bootstrap" width="30" height="30">
+          Kawaii Shop 
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>  
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#noticias" style="color: white;">Noticias</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#productos" style="color:  white;">Productos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contacto" style="color: white;">Contacto</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
   </header>
+
+  <section id="noticias">
+    <header id="inicio" class="bg-dark text-white text-center" style="background-color: #CD6272;">
+      <div class="container">
+        <div id="carouselExampleCaptions" class="carousel slide">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="imagenes/slider1.jpg" class="d-center w-75" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Chainsaw man</h5>
+                <p>El anime que parece ser un fracaso para los espectadores.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="imagenes/slider2.jpg" class="d-center w-75" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Cyberpunk: Edgerunners</h5>
+                <p>Cyberpunk 2077 revive de manera milagrosa <br>luego del estreno de la serie Edgerunners.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="imagenes/slider3.jpg" class="d-center w-75" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Third slide label</h5>
+                <p>Some representative placeholder content for the third slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="imagenes/slider4.jpg" class="d-center w-75" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Cyberpunk: Edgerunners</h5>
+                <p>Cyberpunk 2077 revive de manera milagrosa <br>luego del estreno de la serie Edgerunners.</p>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+    </header>
+  </section>
+
 
   <section id="productos" class="py-5">
     <div class="container">
@@ -112,10 +164,7 @@
       <p>&copy; 2023 Computadoras Gamer. Todos los derechos reservados.</p>
     </div>
   </footer>
-
-  <!-- Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
 </body>
 </html>
