--- a/index.html
+++ b/index.html
@@ -4,21 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kawaii Shop</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
   <link rel="icon" href="imagenes/Icon.png">
 </head>
 <body>
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="imagenes/Icon.png" alt="Bootstrap" width="30" height="30">
-          Kawaii Shop 
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>  
-        <ul class="nav justify-content-end">
+  <nav class="navbar fixed-top bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Fixed top</a>
+    </div>
+  </nav>
+
+  <nav class="navbar fixed-top navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="imagenes/Icon.png" alt="Bootstrap" width="30" height="30">
+        Kawaii Shop 
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#noticias" style="color: white;">Noticias</a>
           </li>
@@ -30,12 +36,12 @@
           </li>
         </ul>
       </div>
-    </nav>
-  </header>
+    </div>
+  </nav>
 
   <section id="noticias">
     <header id="inicio" class="bg-dark text-white text-center" style="background-color: #CD6272;">
-      <div class="container">
+      <div class="container-sm">
         <div id="carouselExampleCaptions" class="carousel slide">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -45,30 +51,30 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="imagenes/slider1.jpg" class="d-center w-75" alt="...">
+              <img src="imagenes/slider1.jpg" class="d-center w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Chainsaw man</h5>
                 <p>El anime que parece ser un fracaso para los espectadores.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="imagenes/slider2.jpg" class="d-center w-75" alt="...">
+              <img src="imagenes/slider2.jpg" class="d-center w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Cyberpunk: Edgerunners</h5>
-                <p>Cyberpunk 2077 revive de manera milagrosa <br>luego del estreno de la serie Edgerunners.</p>
+                <p>Cyberpunk 2077 revive de manera milagrosa luego del estreno de la serie Edgerunners.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="imagenes/slider3.jpg" class="d-center w-75" alt="...">
+              <img src="imagenes/slider3.jpg" class="d-center w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
+                <h5>Zom 100 bucket list of the dead barner</h5>
+                <p>Crunchyroll también transmitirá Zom 100: Bucket List of the Dead y con doblaje latino</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="imagenes/slider4.jpg" class="d-center w-75" alt="...">
+              <img src="imagenes/slider4.jpg" class="d-center w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Cyberpunk: Edgerunners</h5>
+                <h5>My love story with yamada-kun at lv999</h5>
                 <p>Cyberpunk 2077 revive de manera milagrosa <br>luego del estreno de la serie Edgerunners.</p>
               </div>
             </div>
@@ -91,36 +97,37 @@
     <div class="container">
       <h2 class="text-center mb-5">Nuestros productos</h2>
       <div class="row">
-        <div class="col-lg-4 mb-4">
+        <div class="col-lg-4 mb-5">
           <div class="card">
-            <img src="imagen1.jpg" class="card-img-top" alt="Computadora Gamer 1">
+            <img src="imagenes/Productos/Mangas/ChainsawManVol1.jpg" class="card-img-top" alt="Computadora Gamer 1">
             <div class="card-body">
-              <h5 class="card-title">Computadora Gamer 1</h5>
+              <h5 class="card-title">Chainsaw Man Vol. 1</h5>
               <p class="card-text">Potencia y rendimiento excepcionales para los juegos más exigentes.</p>
-              <a href="#" class="btn btn-primary">Ver detalles</a>
+              <a href="#" class="btn btn-dark">Ver detalles</a>
             </div>
           </div>
         </div>
-        <div class="col-lg-4 mb-4">
+        <div class="col-lg-4 mb-5">
           <div class="card">
-            <img src="imagen2.jpg" class="card-img-top" alt="Computadora Gamer 2">
+            <img src="imagenes/Productos/Mangas/Zom100Vol1.jpg" class="card-img-top" alt="Computadora Gamer 2">
             <div class="card-body">
-              <h5 class="card-title">Computadora Gamer 2</h5>
+              <h5 class="card-title">Zom 100 bucket list of the dead barner Vol.1</h5>
               <p class="card-text">Sumérgete en mundos virtuales con gráficos de alta calidad y fluidez.</p>
-              <a href="#" class="btn btn-primary">Ver detalles</a>
+              <a href="#" class="btn btn-dark">Ver detalles</a>
             </div>
           </div>
         </div>
-        <div class="col-lg-4 mb-4">
+        <div class="col-lg-4 mb-5">
           <div class="card">
-            <img src="imagen3.jpg" class="card-img-top" alt="Computadora Gamer 3">
+            <img src="imagenes/Productos/Mangas/oshinokoVol1.jpg" class="card-img-top" alt="Computadora Gamer 3" >
             <div class="card-body">
-              <h5 class="card-title">Computadora Gamer 3</h5>
+              <h5 class="card-title">Oshi no ko Vol.1</h5>
               <p class="card-text">Rendimiento inigualable para una experiencia de juego inmersiva.</p>
-              <a href="#" class="btn btn-primary">Ver detalles</a>
+              <a href="#" class="btn btn-dark">Ver detalles</a>
             </div>
           </div>
         </div>
+        <a href="productos.html" class="text-center">Ver más...</a>
       </div>
     </div>
   </section>
@@ -143,16 +150,16 @@
               <label for="mensaje">Mensaje</label>
               <textarea class="form-control" id="mensaje" rows="5" placeholder="Ingresa tu mensaje"></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Enviar mensaje</button>
+            <button type="submit" class="btn btn-dark">Enviar mensaje</button>
           </form>
         </div>
         <div class="col-md-6">
           <p>Puedes encontrarnos en:</p>
           <address>
-            <strong>Computadoras Gamer</strong><br>
-            Calle Principal 123<br>
-            Ciudad, País<br>
-            Teléfono: 123-456-7890
+            <strong>Kawaii Shop</strong><br>
+            6A Avenida 13-54, Cdad. de Guatemala<br>
+            Ciudad de Guatemala, Guatemala<br>
+            Teléfono: 2216 0000
           </address>
         </div>
       </div>
@@ -161,7 +168,7 @@
 
   <footer class="bg-dark text-white py-3 text-center">
     <div class="container">
-      <p>&copy; 2023 Computadoras Gamer. Todos los derechos reservados.</p>
+      <p>&copy; 2023 Kawaii Shop. Todos los derechos reservados.</p>
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
