--- a/index.html
+++ b/index.html
@@ -8,28 +8,31 @@
   <link rel="icon" href="imagenes/Icon.png">
 </head>
 <body>
-  <nav class="navbar fixed-top bg-body-tertiary">
+  <nav class="navbar fixed-top navbar-expand-lg bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Fixed top</a>
-    </div>
-  </nav>
-
-  <nav class="navbar fixed-top navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="imagenes/Icon.png" alt="Bootstrap" width="30" height="30">
-        Kawaii Shop 
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <img src="imagenes/Icon.png" alt="Bootstrap" width="30" height="30">
+      <a class="navbar-brand" href="index.html" style="color: white;">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#noticias" style="color: white;">Noticias</a>
+            <a class="nav-link active" aria-current="page" href="index.html" style="color: white;">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#productos" style="color:  white;">Productos</a>
+            <a class="nav-link" href="#productos" style="color: white;">Nuevos Lanzamientos</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" style="color: white;"href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Productos
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="productos.html" >Mangas</a></li>
+              <li><a class="dropdown-item" href="#" >Another action</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#" >Something else here</a></li>
+            </ul>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contacto" style="color: white;">Contacto</a>
@@ -92,10 +95,9 @@
     </header>
   </section>
 
-
   <section id="productos" class="py-5">
     <div class="container">
-      <h2 class="text-center mb-5">Nuestros productos</h2>
+      <h2 class="text-center mb-5">Nuevos Lanzamientos</h2>
       <div class="row">
         <div class="col-lg-4 mb-5">
           <div class="card">
